수정: wrap padding 추가 header fixed로 인해 섹션이 가려지는 현상을 relative로 주었으나 오버플로우가 발생해 wrap에 padding-top을 주고 섹션을 static로 바꾸었다

--- a/css/media.css
+++ b/css/media.css
@@ -94,6 +94,9 @@
 
 @media screen and (max-width: 910px) {
   /* header style */
+  .wrap {
+    padding-top: 113px;
+  }
   .header .header_link {
     display: none;
   }
@@ -118,18 +121,6 @@
 
   .header_info .fa-bars {
     display: block;
-  }
-
-  /* section style */
-
-  section,
-  footer,
-  .slider {
-    top: 110px;
-  }
-
-  .slider.mobile {
-    top: 113px;
   }
 
   /* event style */
@@ -289,13 +280,13 @@
     width: 70%;
   }
 
-  .header_navlogin {
-    padding: 10px;
-  }
-
   .header_navimg {
     width: 100%;
     height: 70px;
+  }
+
+  .header_bottom .search {
+    width: 80%;
   }
 
   .godiva_h2 {
